--- a/views/index.jade
+++ b/views/index.jade
@@ -37,11 +37,11 @@ html(lang='en',ng-app='brwryApp')
 								a(href='#/setup') Setup
 						ul.nav.navbar-nav.navbar-right
 							li(ng-repeat="gpioPin in system.equipment | orderBy:gpioPin.address")
-								button.btn.navbar-btn(href='#/' ng-click="toggleGPIO(gpioPin)") {{gpioPin.address}} - 
-									span(ng-show="gpioPin.state") Off
-									span(ng-hide="gpioPin.state") On
+								button.btn.navbar-btn(href='#/' data-ng-click="toggleGPIO(system,gpioPin)" data-ng-class="getEquipmentClass(gpioPin.value)") {{gpioPin.address}} - 
+									span(ng-hide="gpioPin.value") Off
+									span(ng-show="gpioPin.value") On
 							li(ng-repeat="temperature in temperatures")
 								a(href='#/' tooltip-placement="bottom" tooltip="{{temperature.sensorname}}") {{temperature.temperature}} &deg;C
 							li
-								button.btn.btn-danger.navbar-btn(href='#/' ng-click="toggleAllGPIO()") All Off!
+								button.btn.btn-danger.navbar-btn(href='#/' data-ng-click="toggleAllGPIO()") All Off!
 			div(data-ui-view)
