--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,7 +1,25 @@
 <div class="row">
+	<div class="col-xs-12">
+		<div class="panel panel-success">
+			<div class="panel-heading"><h3 class="panel-title">{{system.brewername}}'s {{system.systemname}}</h3></div>
+			<div class="panel-body">
+				<div class="row">
+					<div class="col-xs-9" id="d3chart">
+						<d3></d3>
+					</div>
+					<div class="col-xs-3" id="d3legend">
+					asdf
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="row">
 	<div class="col-md-4">
 		<div class="panel panel-primary">
-			<div class="panel-heading"><h3 class="panel-title">{{system.brewername}}'s {{system.systemname}}</h3></div>
+			<div class="panel-heading"><h3 class="panel-title">Controls</h3></div>
 			<div class="panel-body">
 				<div data-ng-show="system.brewstate">
 					<p>Currently Brewing: {{system.currentbrew}}</p>
@@ -39,24 +57,6 @@
 				<ul class="list-group">
 					<li class="list-group-item" ng-repeat="gpioPin in system.equipment | orderBy:gpioPin.address"><button class="btn btn-primary" ng-click="toggleGPIO(system,gpioPin)">Toggle</button> GPIO Pin {{gpioPin.address}} has a value of {{gpioPin.value}}</li>
 				</ul>
-			</div>
-		</div>
-	</div>
-</div>
-
-<div class="row">
-	<div class="col-xs-12">
-		<div class="panel panel-success">
-			<div class="panel-heading"><h3 class="panel-title">Chart</h3></div>
-			<div class="panel-body">
-				<div class="row">
-					<div class="col-xs-9" id="d3chart">
-						<d3></d3>
-					</div>
-					<div class="col-xs-3" id="d3legend">
-					asdf
-					</div>
-				</div>
 			</div>
 		</div>
 	</div>
