--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,12 +5,12 @@
   shape-rendering: crispEdges;
 }
 
-.x.axis path {
-  display: none;
-}
-
 .line {
   fill: none;
   stroke: steelblue;
   stroke-width: 1.5px;
+}
+
+.area {
+  fill: steelblue;
 }
