--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,3 +14,16 @@
 .area {
   fill: steelblue;
 }
+
+.dot {
+  stroke: #000;
+  fill: steelblue;
+}
+
+.area.above {
+  fill: rgb(252,141,89);
+}
+
+.area.below {
+  fill: rgb(145,207,96);
+}
