--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,3 +1,4 @@
+<alert data-ng-repeat="alert in alerts" type="alert.type" close="closeAlert($index)">{{alert.msg}}</alert>
 <div class="row">
 	<div class="col-xs-12">
 		<div class="panel panel-success">
@@ -44,20 +45,22 @@
 		<div class="panel panel-warning">
 			<div class="panel-heading"><h3 class="panel-title">Temperature Data</h3></div>
 			<div class="panel-body">
-				<ul class="list-group">
-					<li class="list-group-item" ng-repeat="temperature in temperatures">{{temperature.temperature}} on sensor {{temperature.sensoraddress}} at {{temperature.datetime}}</li>
-				</ul>
+				
 			</div>
+			<ul class="list-group">
+				<li class="list-group-item" ng-repeat="temperature in temperatures">{{temperature.sensorname}} at {{temperature.datetime | date:'mediumTime'}}<span class="badge">{{temperature.temperature}}</span></li>
+			</ul>
 		</div>
 	</div>
 	<div class="col-md-4">
 		<div class="panel panel-danger">
 			<div class="panel-heading"><h3 class="panel-title">GPIO Pin Control</h3></div>
 			<div class="panel-body">
-				<ul class="list-group">
-					<li class="list-group-item" ng-repeat="gpioPin in system.equipment | orderBy:gpioPin.address"><button class="btn btn-primary" ng-click="toggleGPIO(system,gpioPin)">Toggle</button> GPIO Pin {{gpioPin.address}} has a value of {{gpioPin.value}}</li>
-				</ul>
+				
 			</div>
+			<ul class="list-group">
+				<li class="list-group-item" ng-repeat="gpioPin in system.equipment | orderBy:gpioPin.address"><button class="btn btn-primary" ng-click="toggleGPIO(system,gpioPin)">Toggle</button> GPIO Pin {{gpioPin.address}} <span class="badge">{{gpioPin.value}}</span></li>
+			</ul>
 		</div>
 	</div>
 </div>
