--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -53,7 +53,7 @@
 					<p>Brew Name: <input type="text" ng-model="system.currentbrew"> </p>
 					<div class="btn-group btn-group-justified">
 						<div class="btn-group">
-							<button type="button" class="btn btn-success" data-ng-click="newBrew(system)">Start New Brew</span></button>
+							<button type="button" class="btn btn-success" data-ng-click="newBrew(system.currentbrew)">Start New Brew</span></button>
 						</div>
 					</div>
 				</div>
